--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,10 @@
         {% endif %}
     </head>
     <body>
-        <div>blog: <a href="/index">home</a></div>
+        <div>blog: 
+            <a href="/index">home</a>
+            <a href="/login">login</a>            
+        </div>
         <hr>
         {% block content %}{% endblock %}
         
