--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,11 @@
     <body>
         <div>blog: 
             <a href="{{ url_for('index') }}">home</a>
-            <a href="{{ url_for('login') }}">login</a>            
+            {% if current_user.is_anonymous %}
+            <a href="{{ url_for('login') }}">login</a>
+            {% else %}
+            <a href="{{ url_for('logout') }}">logout</a>
+            {% endif %}            
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
